--- a/jgu_course_reviewer/requirements.txt
+++ b/jgu_course_reviewer/requirements.txt
@@ -10,6 +10,8 @@ django-model-utils==5.0.0
 django-redis==5.4.0
 django-select2==8.2.3
 django-star-ratings==0.9.2
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
 redis==5.2.1
 soupsieve==2.6
 sqlparse==0.5.3
