--- a/jgu_course_reviewer/requirements.txt
+++ b/jgu_course_reviewer/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.4.1
 crispy-bootstrap5==2024.10
 Django==5.1.7
 django-appconf==1.0.6
-django-bootstrap-v5==1.0.11
+django-bootstrap5==25.1
 django-braces==1.16.0
 django-crispy-forms==2.3
 django-model-utils==5.0.0
