--- a/jgu_course_reviewer/compose.yml
+++ b/jgu_course_reviewer/compose.yml
@@ -12,7 +12,7 @@ services:
 
   web:
     build: .
-    container_name: jgu-docker-container
+    container_name: jgu-django-dev
     ports:
       - "8080:8080"
     depends_on:
@@ -26,4 +26,15 @@ services:
       DATABASE_HOST: ${DB_HOST}
       DATABASE_PORT: ${DB_PORT}
     env_file:
-      - .env
+      - .env.dev
+
+  proxy:
+    image: nginx
+    container_name: jgu-nginx-dev
+    ports: 
+      - "8000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./static:/static:ro
+    depends_on:
+      - web
