--- a/jgu_course_reviewer/compose.prod.yml
+++ b/jgu_course_reviewer/compose.prod.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - .nginx.conf:/etc/nginx/conf.d/jgu_reviews.conf
+      - ./nginx.conf:/etc/nginx/conf.d/jgu_reviews.conf
       - ./static:/static
     depends_on:
       - web
