--- a/jgu_course_reviewer/Dockerfile
+++ b/jgu_course_reviewer/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y wget gnupg unzip
+RUN apt-get update && apt-get install -y postgresql-client
 
 # Install Google Chrome
 RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
